修改图片外联、加入google analytics 代码

--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
         transform: scale(1.1);
     }
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R1Z8Y9NR99"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-R1Z8Y9NR99');
+</script>
 </head>
 
 <body>
@@ -81,10 +90,10 @@
             <li>Fully assembled for easy installation</li>
         </ul>
         <div class="gallery">
-            <img src="http://driver.365yhb.com//pics/2023-7-28-11-01-26-jq1nwar4qk-1690513286874-5.jpg" alt="图片1">
-            <img src="http://driver.365yhb.com//pics/2023-7-28-11-01-38-g6ndwgop22-1690513298248-6.jpg" alt="图片2">
-            <img src="http://driver.365yhb.com//pics/2023-7-28-11-01-58-8x6h81owti-1690513318238-7.jpg" alt="图片3">
-            <img src="http://driver.365yhb.com//pics/2023-7-28-11-02-13-fdzj9pxonk-1690513333310-8.jpg" alt="图片4">
+            <img src="https://i.imgur.com/LpBHHWK.jpg" alt="图片1">
+            <img src="https://i.imgur.com/wpLvv9B.jpg" alt="图片2">
+            <img src="https://i.imgur.com/Razx9GY.jpg" alt="图片3">
+            <img src="https://i.imgur.com/EUqNxZJ.jpg" alt="图片4">
         </div>
         <h2 id="wide-compatibility-for-model-numbers">Wide Compatibility for Model Numbers</h2>
         <ul>
