--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
         <p>WP8318084, AP6012742, ES8084, PS11745957, TJ90ES8084, WP8318084VP.</p>
         <h3 id="fixes-the-following-symptoms-">Fixes the following symptoms:</h3>
         <ul>
-            <li>Will not agitate</li>
-            <li>Will not start</li>
-            <li>Timer will not advance</li>
-            <li>Pumps but won&#39;t spin.</li>
+            <li>⭐Will not agitate</li>
+            <li>⭐Will not start</li>
+            <li>⭐Timer will not advance</li>
+            <li>⭐Pumps but won&#39;t spin.</li>
         </ul>
         <div class="gallery">
             <img src="https://m.media-amazon.com/images/I/514cX1Eh4CL._SL1500_.jpg" alt="图片1">
@@ -83,11 +83,11 @@
         <p>This 8318084 Washer Lid Switch is found in your washer. The pin on the lid pushes on the lever of the lid switch to tell the machine that the lid is closed. This part includes the green grounding wire.</p>
         <p>The product is made of made of high-quality materials to ensure they can serve you well for a long time.</p>
         <ul>
-            <li>Durable high quality material</li>
-            <li>Well-tested by the manufacturer</li>
-            <li>Perfect fit</li>
-            <li>Ensure long-lasting</li>
-            <li>Fully assembled for easy installation</li>
+            <li>⭐Durable high quality material</li>
+            <li>⭐Well-tested by the manufacturer</li>
+            <li>⭐Perfect fit</li>
+            <li>⭐Ensure long-lasting</li>
+            <li>⭐Fully assembled for easy installation</li>
         </ul>
         <div class="gallery">
             <img src="https://i.imgur.com/LpBHHWK.jpg" alt="图片1">
