add google ads & add buy now button

--- a/index.html
+++ b/index.html
@@ -37,6 +37,27 @@
     .gallery img:hover {
         transform: scale(1.1);
     }
+
+    .amazon-btn {
+      display: inline-block;
+      padding: 0.5em 1.5em;
+      background-color: #FFA41C;
+      color: #000;
+      border: none;
+      border-radius: 4px;
+      font-size: 1.2em;
+      font-weight: bold;
+      text-align: center;
+      text-decoration: none;
+    }
+
+    .amazon-btn:hover {
+      background-color: #FFD814;
+    }
+
+    .amazon-btn i {
+      margin-right: 0.5em;
+    }
     </style>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-R1Z8Y9NR99"></script>
@@ -46,6 +67,18 @@
   gtag('js', new Date());
 
   gtag('config', 'G-R1Z8Y9NR99');
+</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8790496632299830"
+     crossorigin="anonymous"></script>
+<!-- 横向banner -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8790496632299830"
+     data-ad-slot="5065618369"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </head>
 
@@ -66,6 +99,9 @@
         <p>Whirlpool, Kenmore, Roper, Admiral, Amana, Crosley, Estate, and others</p>
         <h3 id="replaces-part-number-">Replaces Part Number:</h3>
         <p>WP8318084, AP6012742, ES8084, PS11745957, TJ90ES8084, WP8318084VP.</p>
+        <button class="amazon-btn" onclick="window.location.href='https://www.amazon.com/dp/B0C7M1S96N'">
+          <i class="fa fa-shopping-cart"></i> Buy Now on amazon
+        </button>
         <h3 id="fixes-the-following-symptoms-">Fixes the following symptoms:</h3>
         <ul>
             <li>⭐Will not agitate</li>
@@ -96,6 +132,9 @@
             <img src="https://i.imgur.com/EUqNxZJ.jpg" alt="图片4">
         </div>
         <h2 id="wide-compatibility-for-model-numbers">Wide Compatibility for Model Numbers</h2>
+        <button class="amazon-btn" onclick="window.location.href='https://www.amazon.com/dp/B0C7M1S96N'">
+          <i class="fa fa-shopping-cart"></i> Buy Now on amazon
+        </button>
         <ul>
             <li><b>Maytag</b></li>
         </ul>
