change google ads position & add pic alt info

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>How To Fix a Washing Machine Lid Switch</title>
+    <title>How To Fix a Washing Machine Lid Switch Compatible with model 8318084</title>
+    <meta name="description" content=" This aftermarket part fits a variety of popular washing machine brands, including Whirlpool, Kenmore, and Roper. With a part number that replaces multiple models, such as 8318084, ER8318084, and WP8318084VP, this product is a versatile solution for your washing machine needs, Fixes the following symptoms: Will Not Start | Will not agitate | Timer will not advance | Pumps but will not spin.Please note, this is a non-original aftermarket part. ">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <style>
     .center {
@@ -68,24 +69,13 @@
 
   gtag('config', 'G-R1Z8Y9NR99');
 </script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8790496632299830"
-     crossorigin="anonymous"></script>
-<!-- 横向banner -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-8790496632299830"
-     data-ad-slot="5065618369"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
 </head>
 
 <body>
     <div class="margin">
         <div class="center">
-            <h1 id="how-to-fix-a-washing-machine-lid-switch">How To Fix a Washing Machine Lid Switch</h1>
+            <h1 id="how-to-fix-a-washing-machine-lid-switch">How To Fix a Washing Machine Lid Switch Compatible with model 8318084</h1>
         </div>
         <div>
             <p>Open the lid on a washing machine,
@@ -110,10 +100,10 @@
             <li>⭐Pumps but won&#39;t spin.</li>
         </ul>
         <div class="gallery">
-            <img src="https://m.media-amazon.com/images/I/514cX1Eh4CL._SL1500_.jpg" alt="图片1">
-            <img src="https://m.media-amazon.com/images/I/41e4NjlkLfL._SX522_.jpg" alt="图片2">
-            <img src="https://m.media-amazon.com/images/I/41A2UWxNZ6L._SX522_.jpg" alt="图片3">
-            <img src="https://m.media-amazon.com/images/I/41+EkznuQlL._SX522_.jpg" alt="图片4">
+            <img src="https://m.media-amazon.com/images/I/514cX1Eh4CL._SL1500_.jpg" alt="2 pack washer lid switch replacement">
+            <img src="https://m.media-amazon.com/images/I/41e4NjlkLfL._SX522_.jpg" alt="8318084 Washer lid switch replacement">
+            <img src="https://m.media-amazon.com/images/I/41A2UWxNZ6L._SX522_.jpg" alt="6.7 x 4.7 x 1.5 inches">
+            <img src="https://m.media-amazon.com/images/I/41+EkznuQlL._SX522_.jpg" alt="Easy to install and use">
         </div>
         <h2 id="high-quality-easy-installation-and-quick-solution">High Quality, Easy Installation and Quick Solution</h2>
         <p>This 8318084 Washer Lid Switch is found in your washer. The pin on the lid pushes on the lever of the lid switch to tell the machine that the lid is closed. This part includes the green grounding wire.</p>
@@ -126,10 +116,10 @@
             <li>⭐Fully assembled for easy installation</li>
         </ul>
         <div class="gallery">
-            <img src="https://i.imgur.com/LpBHHWK.jpg" alt="图片1">
-            <img src="https://i.imgur.com/wpLvv9B.jpg" alt="图片2">
-            <img src="https://i.imgur.com/Razx9GY.jpg" alt="图片3">
-            <img src="https://i.imgur.com/EUqNxZJ.jpg" alt="图片4">
+            <img src="https://i.imgur.com/LpBHHWK.jpg" alt="Maytag lid switch replacement">
+            <img src="https://i.imgur.com/wpLvv9B.jpg" alt="Estate lid switch replacement">
+            <img src="https://i.imgur.com/Razx9GY.jpg" alt="Roper lid switch replacement">
+            <img src="https://i.imgur.com/EUqNxZJ.jpg" alt="Kenmore washers lid lock">
         </div>
         <h2 id="wide-compatibility-for-model-numbers">Wide Compatibility for Model Numbers</h2>
         <button class="amazon-btn" onclick="window.location.href='https://www.amazon.com/dp/B0C7M1S96N'">
@@ -143,6 +133,20 @@
             <li><b>Estate</b></li>
         </ul>
         <p>TAWX400RQ1, TAWX400RQ2, TAWB600PQ2, TAWS800PQ0, TAWX400RQ0, TAWS750PQ0, TAWS850PQ0, ETW4300TQ0, ETW4300SQ0, TAWS850PQ1, ETW4100SQ0, TAWS800JQ3, TAWS700RQ3, ETW4300SQ1, ETW4400TQ0, TAWB300RW1, 7MTAWS800JQ5, ETW4100SQ2, ETW4100SQ3, ETW4200SQ0, ETW4200WQ0, ETW4400SQ1, ETW4400VQ1, ETW4400VQ2, ETW4400VQ3, ETW4400WQ0, ETW4400WQ1, ETW4400XQ0, TAWB300RW0, TAWB600JQ1</p>
+
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8790496632299830"
+             crossorigin="anonymous"></script>
+        <!-- 横向banner -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-8790496632299830"
+             data-ad-slot="5065618369"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+
         <ul>
             <li><b>Roper</b></li>
         </ul>
