modify ads position

--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
 
   gtag('config', 'G-R1Z8Y9NR99');
 </script>
+<!-- 横向 banner 广告-->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8790496632299830"
+     crossorigin="anonymous"></script>
+     <script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 </head>
 
@@ -134,8 +140,7 @@
         </ul>
         <p>TAWX400RQ1, TAWX400RQ2, TAWB600PQ2, TAWS800PQ0, TAWX400RQ0, TAWS750PQ0, TAWS850PQ0, ETW4300TQ0, ETW4300SQ0, TAWS850PQ1, ETW4100SQ0, TAWS800JQ3, TAWS700RQ3, ETW4300SQ1, ETW4400TQ0, TAWB300RW1, 7MTAWS800JQ5, ETW4100SQ2, ETW4100SQ3, ETW4200SQ0, ETW4200WQ0, ETW4400SQ1, ETW4400VQ1, ETW4400VQ2, ETW4400VQ3, ETW4400WQ0, ETW4400WQ1, ETW4400XQ0, TAWB300RW0, TAWB600JQ1</p>
 
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8790496632299830"
-             crossorigin="anonymous"></script>
+        
         <!-- 横向banner -->
         <ins class="adsbygoogle"
              style="display:block"
@@ -143,9 +148,7 @@
              data-ad-slot="5065618369"
              data-ad-format="auto"
              data-full-width-responsive="true"></ins>
-        <script>
-             (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+        
 
         <ul>
             <li><b>Roper</b></li>
