--- a/index.html
+++ b/index.html
@@ -70,11 +70,8 @@
   gtag('config', 'G-R1Z8Y9NR99');
 </script>
 <!-- 横向 banner 广告-->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8790496632299830"
-     crossorigin="anonymous"></script>
-     <script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
+
 
 </head>
 
@@ -142,12 +139,14 @@
 
         
         <!-- 横向banner -->
-        <ins class="adsbygoogle"
-             style="display:block"
+        <amp-ad width="100vw" height="320"
+             type="adsense"
              data-ad-client="ca-pub-8790496632299830"
              data-ad-slot="5065618369"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
+             data-auto-format="rspv"
+             data-full-width="">
+          <div overflow=""></div>
+        </amp-ad>
         
 
         <ul>
