add link to inside html a href

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <h3>14. It's Done.</h3>
 
     <div>
-        <h3>Get the best deals on <a href="">Washer Lid Switch 8318084</a> when you shop the largest online selection at <a href="https://www.amazon.com/dp/B0C7M1S96N">amazon.com</a>. Free shipping on many items | Browse your favorite brands | affordable prices.
+        <h3>Get the best deals on <a href="https://lidswitchreplacement.link/washerlidswitch8318084.html">Washer Lid Switch 8318084</a> when you shop the largest online selection at <a href="https://www.amazon.com/dp/B0C7M1S96N">amazon.com</a>. Free shipping on many items | Browse your favorite brands | affordable prices.
     </div>
     
   
