index add structor jsonld

--- a/index.html
+++ b/index.html
@@ -1,7 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "HowTo",
+          "image": {
+            "@type": "ImageObject",
+            "url": "https://i.imgur.com/PqPruQr.png"
+          },
+          "name": "How to replace the washer lid switch model 8318084",
+          "supply": [
+            {
+              "@type": "HowToSupply",
+              "name": "washer lid switch 8318084"
+            }
+          ],
+          "tool": [
+            {
+              "@type": "HowToTool",
+              "name": "screwdrivers"
+            }
+          ],
+          "step":[
+            {
+              "@type": "HowToStep",
+              "name": "dDsconnect the power",
+              "text": "Always disconnect the power supply to the washer before starting any work to avoid electric shock.",
+              "image": "https://i.imgur.com/MfWIbum.png",
+              "url": "https://lidswitchreplacement.link#step1"
+            }, {
+              "@type": "HowToStep",
+              "name": "Remove screws of washer's top control panel",
+              "text": "Locate the screws at the back of the washer's top control panel and remove them.",
+              "image": "https://i.imgur.com/agi9pMg.png",
+              "url": "https://lidswitchreplacement.link#step2"
+            }, {
+              "@type": "HowToStep",
+              "name": "Lift the control panel up",
+              "text": "Gently pull the control panel forward and lift it up, disconnecting any wires or plugs.",
+              "image": "https://i.imgur.com/dH1st6b.png",
+              "url": "https://lidswitchreplacement.link#step3"
+            }, {
+              "@type": "HowToStep",
+              "name": "Remove the wires and test the switch",
+              "text": "Now you can see the door switch, set your multi metre on continuation and insert the probes into the left and the middle terminals. You should hear a beef when the doors closed. It means the circuit is closed and the switch is fine. You can also remove the wires and test the switch. It doesn't make a difference. ",
+              "image": "https://i.imgur.com/ZFsHXv9.png",
+              "url": "https://lidswitchreplacement.link#step4"
+            }, {
+              "@type": "HowToStep",
+              "name": "Remove screws of lid switch",
+              "text": "Find the lid switch beneath the control panel and remove the screws securing it.",
+              "image": "https://i.imgur.com/PqPruQr.png",
+              "url": "https://lidswitchreplacement.link#step5"
+            }
+          ]
+        }
+        </script>
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -93,56 +148,56 @@
 <div  class="center">
     <h2>Here is the step-by-step guide on how to replace the washer lid switch model 8318084:</h2>
   
-    <h3>1. Always disconnect the power supply to the washer before starting any work to avoid electric shock.</h3>
+    <h3 id="step1">1. Always disconnect the power supply to the washer before starting any work to avoid electric shock.</h3>
         <div>
             <img src="https://i.imgur.com/MfWIbum.png" alt="lid switch replacement Whirlpool">
         </div>
-    <h3>2. Locate the screws at the back of the washer's top control panel and remove them.</h3>
+    <h3 id="step2">2. Locate the screws at the back of the washer's top control panel and remove them.</h3>
         <div>
             <img src="https://i.imgur.com/agi9pMg.png" alt="lid switch replacement part">
         </div>
-    <h3>3. Gently pull the control panel forward and lift it up, disconnecting any wires or plugs.</h3>
+    <h3 id="step3">3. Gently pull the control panel forward and lift it up, disconnecting any wires or plugs.</h3>
         <div>
             <img src="https://i.imgur.com/dH1st6b.png" alt="Kenmore washer lid switch replacment">
         </div>
-    <h3>4. Now you can see the door switch, set your multi metre on continuation and insert the probes into the left and the middle terminals. You should hear a beef when the doors closed. It means the circuit is closed and the switch is fine. You can also remove the wires and test the switch. It doesn't make a difference. </h3>
+    <h3 id="step4">4. Now you can see the door switch, set your multi metre on continuation and insert the probes into the left and the middle terminals. You should hear a beef when the doors closed. It means the circuit is closed and the switch is fine. You can also remove the wires and test the switch. It doesn't make a difference. </h3>
         <div>
             <img src="https://i.imgur.com/ZFsHXv9.png" alt="Whirlpool washer lid switch replacement">
         </div>
-    <h3>5. Find the lid switch beneath the control panel and remove the screws securing it.</h3>
+    <h3 id="step5">5. Find the lid switch beneath the control panel and remove the screws securing it.</h3>
         <div>
             <img src="https://i.imgur.com/PqPruQr.png" alt="washer lid switch replacement">
         </div>
-    <h3>6. Disconnect the wire connections on the lid switch.</h3>
+    <h3 id="step6">6. Disconnect the wire connections on the lid switch.</h3>
         <div>
             <img src="https://i.imgur.com/LTq5zL7.png" alt="washer lid switch 8318084">
         </div>
-    <h3>7. Remove the old lid switch and set it aside.</h3>
+    <h3 id="step7">7. Remove the old lid switch and set it aside.</h3>
         <div>
             <img src="https://i.imgur.com/m9p8zWo.png" alt="8318084 washer lid switch connector">
         </div>
-    <h3>8. Take the new lid switch (model 8318084) and make sure it matches the old switch.</h3>
+    <h3 id="step8">8. Take the new lid switch (model 8318084) and make sure it matches the old switch.</h3>
         <div>
             <img src="https://i.imgur.com/vHgaCVM.png" alt="8318084 washing machine lid switch">
         </div>
-    <h3>9. Install the new lid switch onto the washer and reconnect the wire connections.</h3>
+    <h3 id="step9">9. Install the new lid switch onto the washer and reconnect the wire connections.</h3>
         <div>
             <img src="https://i.imgur.com/X0GF6CJ.png" alt="compatible for Whirlpool 8318084 washer lid switch">
         </div>
-    <h3>10. Tighten the screws to secure the new switch in place.</h3>
+    <h3 id="step10">10. Tighten the screws to secure the new switch in place.</h3>
         <div>
             <img src="https://i.imgur.com/cWeq440.png" alt="wp8318084 washer lid switch">
         </div>
-    <h3>11. Place the control panel back in its original position and secure it with screws.</h3>
+    <h3 id="step11">11. Place the control panel back in its original position and secure it with screws.</h3>
         <div>
             <img src="https://i.imgur.com/QwBYfuL.png" alt="place the control panel back in its original position">
         </div>
-    <h3>12. Ensure all screws are tightened and the control panel is securely attached.</h3>
+    <h3 id="step12">12. Ensure all screws are tightened and the control panel is securely attached.</h3>
         <div>
             <img src="https://i.imgur.com/7pM8lXs.png" alt="ensure all the screws are tightened">
         </div>
-    <h3>13. Plug in the washer's power supply and perform necessary testing to ensure successful replacement.</h3>
-    <h3>14. It's Done.</h3>
+    <h3 id="step13">13. Plug in the washer's power supply and perform necessary testing to ensure successful replacement.</h3>
+    <h3 id="step14">14. It's Done.</h3>
 
     <div>
         <h3>Get the best deals on <a href="https://lidswitchreplacement.link/washerlidswitch8318084.html">Washer Lid Switch 8318084</a> when you shop the largest online selection at <a href="https://www.amazon.com/dp/B0C7M1S96N">amazon.com</a>. Free shipping on many items | Browse your favorite brands | affordable prices.
