add structor in product html

--- a/washerlidswitch8318084.html
+++ b/washerlidswitch8318084.html
@@ -2,10 +2,40 @@
 <html lang="en">
 
 <head>
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org/",
+          "@type": "Product",
+          "name": "Washer Lid Switch 8318084",
+          "image": [
+            "https://m.media-amazon.com/images/I/514cX1Eh4CL._SL1500_.jpg",
+            "https://m.media-amazon.com/images/I/41e4NjlkLfL._SX522_.jpg",
+            "https://m.media-amazon.com/images/I/41A2UWxNZ6L._SX522_.jpg",
+            "https://m.media-amazon.com/images/I/41+EkznuQlL._SX522_.jpg",
+            "https://i.imgur.com/LpBHHWK.jpg",
+            "https://i.imgur.com/wpLvv9B.jpg",
+            "https://i.imgur.com/Razx9GY.jpg",
+            "https://i.imgur.com/EUqNxZJ.jpg"
+           ],
+          "description": "Washer Lid Switch 8318084, wide compatibility for multiple models, fixes some sysptoms, easy to install",
+          "sku": "0446310786",
+          "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": 4.9
+          },
+          "offers": {
+            "@type": "AggregateOffer",
+            "offerCount": 40,
+            "lowPrice": 14.99,
+            "highPrice": 17.99,
+            "priceCurrency": "USD"
+          }
+        }
+      </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>How To Fix a Washing Machine Lid Switch Compatible with model 8318084</title>
+    <title>Washer Lid Switch 8318084, </title>
     <meta name="description" content=" This aftermarket part fits a variety of popular washing machine brands, including Whirlpool, Kenmore, and Roper. With a part number that replaces multiple models, such as 8318084, ER8318084, and WP8318084VP, this product is a versatile solution for your washing machine needs, Fixes the following symptoms: Will Not Start | Will not agitate | Timer will not advance | Pumps but will not spin.Please note, this is a non-original aftermarket part. ">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8790496632299830"
@@ -77,7 +107,7 @@
 <body>
     <div class="margin">
         
-        <h1 id="8318084-washer-lid-switch">Washer Lid Switch 8318084</h1>
+        <h1 id="8318084-washer-lid-switch">Washer Lid Switch 8318084, wide compatibility for multiple models, fixes some sysptoms, easy to install</h1>
 
         <h2>You can get the step-by-step guide on how to replace the washer lid switch model 8318084 on this page:<br/> <a href="https://lidswitchreplacement.link/">☞Washer Lid Switch Washer Repair: How to replace washer lid switch 8318084</a></h2>
 
