product structor add rating count

--- a/washerlidswitch8318084.html
+++ b/washerlidswitch8318084.html
@@ -21,7 +21,8 @@
           "sku": "0446310786",
           "aggregateRating": {
             "@type": "AggregateRating",
-            "ratingValue": 4.9
+            "ratingValue": 4.9,
+            "ratingCount": 100
           },
           "offers": {
             "@type": "AggregateOffer",
