index add totaltime structor

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             "url": "https://i.imgur.com/PqPruQr.png"
           },
           "name": "How to replace the washer lid switch model 8318084",
+          "totalTime": "PT30M",
           "supply": [
             {
               "@type": "HowToSupply",
