add meta keywords in index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Washer Repair: How to replace Washer lid switch 8318084</title>
-    <meta name="description" content=" This aftermarket part fits a variety of popular washing machine brands, including Whirlpool, Kenmore, and Roper. With a part number that replaces multiple models, such as 8318084, ER8318084, and WP8318084VP, this product is a versatile solution for your washing machine needs, Fixes the following symptoms: Will Not Start | Will not agitate | Timer will not advance | Pumps but will not spin.Please note, this is a non-original aftermarket part. ">
+    <meta name="description" content="Step-by-Step guide for how to replace the washer lid switch 8318084">
+    <meta name="keywords" content="8318084, lid switch, washer lid switch, wp8318084, Whirlpool, washing machine lid switch, Kenmore, replacement">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8790496632299830"
      crossorigin="anonymous"></script>
@@ -147,7 +148,7 @@
 
   
 <div  class="center">
-    <h2>Here is the step-by-step guide on how to replace the washer lid switch model 8318084:</h2>
+    <h2>Here is the step-by-step guide for how to replace the washer lid switch 8318084:</h2>
   
     <h3 id="step1">1. Always disconnect the power supply to the washer before starting any work to avoid electric shock.</h3>
         <div>
