add meta keywords in lidswitchreplacement8318084.html

--- a/washerlidswitch8318084.html
+++ b/washerlidswitch8318084.html
@@ -22,7 +22,7 @@
           "aggregateRating": {
             "@type": "AggregateRating",
             "ratingValue": 4.9,
-            "ratingCount": 100
+            "ratingCount": 108
           },
           "offers": {
             "@type": "AggregateOffer",
@@ -36,8 +36,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Washer Lid Switch 8318084, </title>
+    <title>Washer Lid Switch 8318084 Replacement</title>
     <meta name="description" content=" This aftermarket part fits a variety of popular washing machine brands, including Whirlpool, Kenmore, and Roper. With a part number that replaces multiple models, such as 8318084, ER8318084, and WP8318084VP, this product is a versatile solution for your washing machine needs, Fixes the following symptoms: Will Not Start | Will not agitate | Timer will not advance | Pumps but will not spin.Please note, this is a non-original aftermarket part. ">
+    <meta name="keywords" content="Washer Lid Switch 8318084, washer not starting, washer not agitate, washer timer not advancing, washer pumps but will not spin">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8790496632299830"
      crossorigin="anonymous"></script>
@@ -110,7 +111,7 @@
         
         <h1 id="8318084-washer-lid-switch">Washer Lid Switch 8318084, wide compatibility for multiple models, fixes some sysptoms, easy to install</h1>
 
-        <h2>You can get the step-by-step guide on how to replace the washer lid switch model 8318084 on this page:<br/> <a href="https://lidswitchreplacement.link/">☞Washer Lid Switch Washer Repair: How to replace washer lid switch 8318084</a></h2>
+        <h2>You can get the step-by-step guide for how to replace the washer lid switch model 8318084 on this page:<br/> <a href="https://lidswitchreplacement.link/">☞Washer Lid Switch Washer Repair: How to replace washer lid switch 8318084</a></h2>
 
         <h3 id="compatible-for-most-brands-include-">Compatible for most brands include:</h3>
         <p>Whirlpool, Kenmore, Roper, Admiral, Amana, Crosley, Estate, and others</p>
